# SII_51478

./: Changelog.txt
practica1/include/: Mundo.h  Raqueta.h  Vector2D.h
practica1/src/: Esfera.cpp  Mundo.cpp  Raqueta.cpp
practica3/include/: DatosMemCompartida.h  Esfera.h  Mundo.h  Plano.h  Raqueta.h
practica3/src/: CMakeLists.txt  Esfera.cpp  Mundo.cpp  Raqueta.cpp  bot.cpp  logger.cpp
practica4/: Changelog  Socket.h
practica4/include/: DatosMemCompartida.h  Esfera.h  Mundo.h~  MundoCliente.h  MundoServidor.h  Plano.h  Raqueta.h  Vector2D.h
practica4/src/: CMakeLists.txt  Esfera.cpp  Esfera.cpp~  Mundo.cpp~  MundoCliente.cpp  MundoServidor.cpp  Raqueta.cpp  Raqueta.cpp~  bot.cpp  cliente.cpp  logger.cpp  servidor.cpp
practica5/: Socket.cpp
practica5/include/: DatosMemCompartida.h  Esfera.h  MundoCliente.h  MundoServidor.h  Plano.h  Raqueta.h  Vector2D.h  glut.h
practica5/src/: CMakeLists.txt  MundoCliente.cpp  MundoServidor.cpp  Raqueta.cpp  cliente.cpp  logger.cpp  servidor.cpp  tenis.cpp
